update for commentslikeControl including count func() by Nov 6 11:21pm
